--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Deploy Check
       uses: actions/setup-node@v3
       with:
-        node-version: 18.x
+        node-version: 18
         cache: 'npm'
     - run: npm install
     - run: npm test
